[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "processon-mcp"
version = "0.1.0"
description = "MCP server for generating ProcessOn mind map files from markdown"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=1.10.0",
    "fastmcp>=0.1.3"
]

[project.scripts]
processon-mcp = "py.processon:main"
